--- a/src/htmlcode.html
+++ b/src/htmlcode.html
@@ -8,6 +8,13 @@
             height:100%;
             overflow:hidden;
             background: #3a3e3e;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            cursor: default;
         }
         .bottom
         {
