Mismo commit #2 con los demás cambios

--- a/src/newFrame.html
+++ b/src/newFrame.html
@@ -105,7 +105,7 @@
     </script>
 </head>
 <body style="background: #343a40;">
-    <h4>div#elm-647.default</h4>
+    <h4 style="height:32px;overflow:auto">div#elm-647.default</h4>
     <div class="sub">
         <span class="title">Comienza en</span><input type="number" id="beginTo" min="0" step="0.5" value="0" />
         <span>seg.</span>
