Acabado el metodo Abrir/Guardar, Deshacer y Rehacer, a no tiene bug, modo de reproduccion para cuando se mueven los elementos

--- a/src/about.html
+++ b/src/about.html
@@ -16,12 +16,6 @@
         {
             font-family: "Open Sans";
             color:white;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
 			cursor: default;
 			font-size:12px;
         }
@@ -137,6 +131,9 @@
 		</li>
 		<li>fs-extra [JP Richardson]
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/jprichardson/node-fs-extra">https://github.com/jprichardson/node-fs-extra</a></li></ul>
+		</li>
+		<li>adm-zip [Another-D-Mention Software]
+			<ul><li><a onclick="Clic(this,event)" href="https://github.com/cthackers/adm-zip">https://github.com/cthackers/adm-zip</a></li></ul>
 		</li>
 		<li>robot.js [Jason Stallings]
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/octalmage/robotjs">https://github.com/octalmage/robotjs</a></li></ul>
