Realizado primera parte de la construccion, ahora toca los estilos y el HTML

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
                 <span>Animación</span>
                 <ul class="bg-dark">
                   <li><span>Reproducir en navegador</span></li>
-				  <li><span>Construir la animación</span></li>
-				  <li class="separator"></li>
+				          <li><span onclick="Construir()">Construir la animación</span></li>
+				          <li class="separator"></li>
                   <li><span>Opciones de Construcción</span></li>			  
                 </ul>
 			</li>
