Arregaldo construccion ahora funciona bien, queda hacer bien el hacer,deshacer y despues haremos las preferencias de construccion etc...

--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,10 @@
 			<li>
                 <span>Animación</span>
                 <ul class="bg-dark">
-                  <li><span>Reproducir en navegador</span></li>
-				          <li><span onclick="Construir()">Construir la animación</span></li>
-				          <li class="separator"></li>
-                  <li><span>Opciones de Construcción</span></li>			  
+                  	<li onclick="Reproducir()"><span>Reproducir en navegador</span></li>
+					<li onclick="Construir()"><span>Construir la animación</span></li>
+					<li class="separator"></li>
+                  	<li><span>Opciones de Construcción</span></li>			  
                 </ul>
 			</li>
 			<li>
