--- a/src/buildOption.html
+++ b/src/buildOption.html
@@ -1,10 +1,12 @@
 <html>
 
 <head>
-    <title>Opciones de Construcción</title>
+	<title>Opciones de Construcción</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/option.css" />
-    <script defer type="text/javascript" src="js/option.js"></script>
+	<script defer type="text/javascript" src="js/Storage.js"></script>
+	<script defer type="text/javascript" src="js/option.js"></script>
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="../node_modules/monaco-editor/min/vs/editor/editor.main.css">
 </head>
 
@@ -18,7 +20,7 @@
 	-> aplica estilos? none backwards forwards both
 	-->
     <div class="Options">
-        <h1>Opciones de Construcción</h1>
+        <h1>Opciones</h1>
         <div class="BasicTab selected">
             Básico
         </div>
@@ -26,20 +28,82 @@
             Avanzado
         </div>
         <div class="sidebarElm">
-           <div class="selected">div#elm-65.default</div>   
-           <div>div#elm-93.default</div>   
-           <div>div#elm-85.default</div>   
-           <div>div#elm-71.default</div>         
+			<div>General</div>
+			<div class="uninteract"></div>       
         </div>
         <div class="BasicContainer">
-            <div class="singleOption">
-                Hola
-            </div>
+			<div id="general">
+				<h3>General</h3>
+				<div class="singleOption">
+					<span>Idioma</span>
+					<select>
+						<option>Español</option>
+					</select>
+					<label>Idioma usada por la interfaz de Blimp</label>
+				</div>
+				<div class="singleOption">
+					<span>Tema</span>
+					<select>
+						<option>Negro</option>
+						<option>Blanco</option>
+					</select>
+					<label>Tema de la interfaz de Blimp</label>
+				</div>
+				<div class="singleOption">
+						<span>Extensiones</span>
+						<select>
+							<option>En Desarrollo</option>
+						</select>
+						<button><i class="fa fa-plus"></i></button>
+						<label>Plugins para extender Blimp</label>
+					</div>
+			</div>
+			<div id="animation">
+				<h3>Animación</h3>
+				<div class="singleOption">
+					<span>Velocidad</span>
+					<select id="ease" class="opt">
+						<option value="linear">Lineal</option>
+						<option value="ease-in">Comienzo Lento</option>
+						<option value="ease-out">Final Lento</option>
+						<option value="ease-in-out">Comienzo y Final Lento</option>
+					</select>
+				</div>
+				<div class="singleOption">
+					<span>Retraso</span>
+					<input id="delay" class="opt" type="number" value="0" min="0" max="999" />
+				</div>
+				<div class="singleOption">
+					<span>Número de iteración</span>
+					<input class="opt" id="iteration-count" disabled type="number" value="0" min="0" max="999" />
+					<input class="opt check" type="checkbox" checked="true" /><label>Infinito</label>
+				</div>
+				<div class="singleOption">
+					<span>Dirección</span>
+					<select id="direction" class="opt">
+						<option value="normal">Normal</option>
+						<option value="reverse">Invertido</option>
+						<option value="alternate">Alternar</option>
+						<option value="alternate-reverse">Alternar Invertido</option>
+					</select>
+				</div>
+				<div class="singleOption">
+					<span>Estilos finales</span>
+					<select id="fill-mode" class="opt">
+						<option value="none">Ninguno</option>
+						<option value="backwards">Del final de la animación</option>
+						<option value="forwards">Del principio de la animación</option>
+						<option value="both">Ambos</option>
+					</select>
+				</div>
+				<div class="singleOption">
+					<button id="guardar">Guardar</button>
+				</div>
+			</div>
         </div>
         <div class="AdvancedContainer">
-            Adios
+            <div id="container" style="width:calc(90% - 175px);margin-left:175px;height:80%;border:1px solid grey"></div>
         </div>
-        <div id="container" style="width:100%;height:90%;border:1px solid grey"></div>
     </div>
     <script>
         // require node modules before loader.js comes in
