Conectando la pantalla de Opciones a Blimp, algunos arreglos que hacer pero lo gordo ya esta implementado

--- a/src/about.html
+++ b/src/about.html
@@ -129,6 +129,9 @@
 		<li>Electron [Github, Inc.]
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/electron/electron">https://github.com/electron/electron</a></li></ul>
 		</li>
+		<li>KeyboardJS [Robert Hurst]
+			<ul><li><a onclick="Clic(this,event)" href="https://github.com/RobertWHurst/KeyboardJS">https://github.com/RobertWHurst/KeyboardJS</a></li></ul>
+		</li>
 		<li>fs-extra [JP Richardson]
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/jprichardson/node-fs-extra">https://github.com/jprichardson/node-fs-extra</a></li></ul>
 		</li>
