--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                   	<li onclick="Reproducir()"><span>Reproducir en navegador</span></li>
 					<li onclick="Construir()"><span>Construir la animación</span></li>
 					<li class="separator"></li>
-                  	<li><span>Opciones de Construcción</span></li>			  
+                  	<li onclick="Opciones('animation')"><span>Opciones de Construcción</span></li>			  
                 </ul>
 			</li>
 			<li>
